Source/WebKit2/UIProcess/API/Cocoa/WKWebsiteDataStore.mm
@@ -55,6 +55,17 @@
     return _websiteDataStore->isNonPersistent();
 }
 
++ (NSSet *)allWebsiteDataTypes
+{
+    static dispatch_once_t onceToken;
+    static NSSet *allWebsiteDataTypes;
+    dispatch_once(&onceToken, ^{
+        allWebsiteDataTypes = [[NSSet alloc] initWithArray:@[ WKWebsiteDataTypeDiskCache, WKWebsiteDataTypeMemoryCache, WKWebsiteDataTypeOfflineWebApplicationCache, WKWebsiteDataTypeCookies, WKWebsiteDataTypeLocalStorage, WKWebsiteDataTypeWebSQLDatabases ]];
+    });
+
+    return allWebsiteDataTypes;
+}
+
 static std::chrono::system_clock::time_point toSystemClockTime(NSDate *date)
 {
     ASSERT(date);
@@ -63,7 +74,7 @@ static std::chrono::system_clock::time_point toSystemClockTime(NSDate *date)
     return system_clock::time_point(duration_cast<system_clock::duration>(duration<double>(date.timeIntervalSince1970)));
 }
 
-- (void)fetchDataRecordsOfTypes:(WKWebsiteDataTypes)websiteDataTypes completionHandler:(void (^)(NSArray *))completionHandler
+- (void)fetchDataRecordsOfTypes:(NSSet *)websiteDataTypes completionHandler:(void (^)(NSArray *))completionHandler
 {
     auto completionHandlerCopy = Block_copy(completionHandler);
 
@@ -80,7 +91,7 @@ static std::chrono::system_clock::time_point toSystemClockTime(NSDate *date)
     });
 }
 
-- (void)removeDataOfTypes:(WKWebsiteDataTypes)websiteDataTypes modifiedSince:(NSDate *)date completionHandler:(void (^)())completionHandler
+- (void)removeDataOfTypes:(NSSet *)websiteDataTypes modifiedSince:(NSDate *)date completionHandler:(void (^)())completionHandler
 {
     auto completionHandlerCopy = Block_copy(completionHandler);
     _websiteDataStore->websiteDataStore().removeData(WebKit::toWebsiteDataTypes(websiteDataTypes), toSystemClockTime(date ? date : [NSDate distantPast]), [completionHandlerCopy] {
@@ -99,7 +110,7 @@ static Vector<WebKit::WebsiteDataRecord> toWebsiteDataRecords(NSArray *dataRecor
     return result;
 }
 
-- (void)removeDataOfTypes:(WKWebsiteDataTypes)websiteDataTypes forDataRecords:(NSArray *)dataRecords completionHandler:(void (^)())completionHandler
+- (void)removeDataOfTypes:(NSSet *)websiteDataTypes forDataRecords:(NSArray *)dataRecords completionHandler:(void (^)())completionHandler
 {
     auto completionHandlerCopy = Block_copy(completionHandler);
 
